--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -144,7 +144,10 @@ endif()
 set(PythonInterp_FIND_VERSION 3)
 set(PythonInterp_FIND_VERSION_COUNT 1)
 set(PythonInterp_FIND_VERSION_MAJOR 3)
-include(FindPythonInterp REQUIRED)
+include(FindPythonInterp)
+if(NOT PYTHONINTERP_FOUND)
+  message(FATAL_ERROR "Please install Python (version 3 or higher).")
+endif()
 
 if (APPLE)
   set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
