--- a/src/smpi/smpif90.in
+++ b/src/smpi/smpif90.in
@@ -9,7 +9,7 @@
 SIMGRID_VERSION="@SIMGRID_VERSION_STRING@"
 SIMGRID_GITHASH="@SIMGRID_GITHASH@"
 
-F90=@GFORTRAN_EXE@
+F90=@SAVED_Fortran_COMPILER@
 
 INCLUDEARGS="@includeflag@"
 CMAKE_LINKARGS="-L@libdir@"
