--- a/src/smpi/smpiff.in
+++ b/src/smpi/smpiff.in
@@ -9,7 +9,7 @@
 SIMGRID_VERSION="@SIMGRID_VERSION_STRING@"
 SIMGRID_GITHASH="@SIMGRID_GITHASH@"
 
-F77=@GFORTRAN_EXE@
+F77=@SAVED_Fortran_COMPILER@
 
 INCLUDEARGS="@includeflag@"
 CMAKE_LINKARGS="-L@libdir@"
