--- a/tools/cmake/src/internal_config.h.in
+++ b/tools/cmake/src/internal_config.h.in
@@ -62,6 +62,7 @@
 /* Other function checks */
 #define HAVE_BACKTRACE @HAVE_BACKTRACE@ /* Function backtrace */
 #define HAVE_MMAP      @HAVE_MMAP@ /* Function mmap */
+#define HAVE_MREMAP    @HAVE_MREMAP@ /* Function mremap */
 #define HAVE_SEM_INIT  @HAVE_SEM_INIT@ /* Function sem_init (part of XPG6 standard only) */
 #define HAVE_POPEN     @HAVE_POPEN@ /* Function popen */
 #define HAVE_SYSCONF   @HAVE_SYSCONF@ /* Function sysconf */
