Add a FreeBSD backend for get_memory_map(), allow to enable smpi privatization. Thanks to M. Volat !

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -393,12 +393,9 @@ endif()
 
 if(enable_smpi)
   SET(HAVE_SMPI 1)
-  if("${CMAKE_SYSTEM}" MATCHES "Linux")
+  if("${CMAKE_SYSTEM}" MATCHES "Linux|FreeBSD")
     SET(USE_LIBUTIL 0)
     SET(HAVE_PRIVATIZATION 1)
-  elseif("${CMAKE_SYSTEM}" MATCHES "^FreeBSD")
-    SET(USE_LIBUTIL 0)
-    SET(HAVE_PRIVATIZATION 0)
   else()
     message (STATUS "Warning:  no support for SMPI automatic privatization on this platform")
     SET(HAVE_PRIVATIZATION 0)
