--- a/tools/cmake/src/internal_config.h.in
+++ b/tools/cmake/src/internal_config.h.in
@@ -70,3 +70,4 @@
 /* Other checks */
 #cmakedefine ADDR2LINE       "@ADDR2LINE@" /* Path to the addr2line tool */
 #define HAVE_GRAPHVIZ   @HAVE_GRAPHVIZ@ /* The graphviz library */
+#define HAVE_LIBUNWIND  @HAVE_LIBUNWIND@ /* The lib unwind library (for MC and backtrace display) */
