fix Mac OSX build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -382,7 +382,6 @@ endif()
 if(enable_model-checking AND NOT "${CMAKE_SYSTEM}" MATCHES "Linux")
   message(WARNING "Support for model-checking has not been enabled on ${CMAKE_SYSTEM}: disabling it")
   set(enable_model-checking FALSE)
-  set(HAVE_MC 0)
 endif()
 
 if(enable_model-checking)
@@ -392,6 +391,7 @@ if(enable_model-checking)
   SET(SIMGRID_DEP "${SIMGRID_DEP} -ldw")
 else()
   SET(HAVE_MC 0)  
+  set(HAVE_MMALLOC 0)
 endif()
 
 if (enable_model-checking AND enable_ns3)
