fix mac build (another try)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -334,6 +334,11 @@ else()
   set(HAVE_THREAD_LOCAL_STORAGE 0)
 endif()
 
+if(enable_model-checking AND NOT "${CMAKE_SYSTEM}" MATCHES "Linux")
+  message(WARNING "Support for model-checking has not been enabled on ${CMAKE_SYSTEM}: disabling it")
+  set(enable_model-checking FALSE)
+endif()
+
 if(HAVE_MMAP AND HAVE_THREAD_LOCAL_STORAGE)
   SET(HAVE_MMALLOC 1)
 else()
@@ -358,7 +363,10 @@ endif()
 
 include(FindLibunwind)
 if(HAVE_LIBUNWIND)
-  SET(SIMGRID_DEP "${SIMGRID_DEP} -lunwind -lunwind-ptrace")
+  SET(SIMGRID_DEP "${SIMGRID_DEP} -lunwind")
+  if("${CMAKE_SYSTEM}" MATCHES "Linux")
+    set(SIMGRID_DEP "${SIMGRID_DEP} -lunwind-ptrace")
+  endif()
   # This supposes that the host machine is either an AMD or a X86.
   # This is deeply wrong, and should be fixed by manually loading -lunwind-PLAT (FIXME)
   if(PROCESSOR_x86_64)
@@ -370,11 +378,6 @@ else()
   if(enable_model-checking)
     message(FATAL_ERROR "Please either install the libunwind7-dev package (or equivalent) or turn off the model-checking option of SimGrid.")
   endif()
-endif()
-
-if(enable_model-checking AND NOT "${CMAKE_SYSTEM}" MATCHES "Linux")
-  message(WARNING "Support for model-checking has not been enabled on ${CMAKE_SYSTEM}: disabling it")
-  set(enable_model-checking FALSE)
 endif()
 
 if(enable_model-checking)
