--- a/tools/cmake/src/internal_config.h.in
+++ b/tools/cmake/src/internal_config.h.in
@@ -55,9 +55,7 @@
 #define HAVE_SMPI          @HAVE_SMPI@
 #define SMPI_FORTRAN       @SMPI_FORTRAN@
 #define HAVE_PRIVATIZATION @HAVE_PRIVATIZATION@ /* We have mmap and objdump to handle privatization */
-
-/* Make PAPI available? */
-#define HAVE_PAPI @HAVE_PAPI@
+#define HAVE_PAPI          @HAVE_PAPI@ /* We have PAPI to fine-grain trace execution time */
 
 /* Other function checks */
 #define HAVE_BACKTRACE @HAVE_BACKTRACE@ /* Function backtrace */
