--- a/src/smpi/smpirun.in
+++ b/src/smpi/smpirun.in
@@ -406,22 +406,24 @@ else
     done
 fi
 
+set -- $hostnames
 ##---- generate <process> tags------------------------------
 for i in ${SEQ}
 do
     if [ -n "${HOSTFILE}" ]; then
-	j=$(( $i % ${NUMHOSTS} + 1 ))
+      j=$(( $i % ${NUMHOSTS} + 1 ))
+    fi
+
+    host=$(eval "echo \${$j}")
+
+    if [ -z $host ]; then
+      host="host"$($j)
     fi
     ##---- optional display of ranks to process mapping
     if [ -n "${MAPOPT}" ]; then
-	echo "[rank $i] -> $(echo $hostnames|cut -d' ' -f$j)"
+      echo "[rank $i] -> $host"
     fi
 
-    if [ -z "$(echo $hostnames|cut -d' ' -f$j)" ]; then
-	host="host"$($j)
-    else
-	host="$(echo $hostnames|cut -d' ' -f$j)"
-    fi
     echo "  <process host=\"${host}\" function=\"$i\"> <!-- function name used only for logging -->" >> ${APPLICATIONTMP}
     echo "    <argument value=\"1\"/> <!-- instance -->" >> ${APPLICATIONTMP}
     echo "    <argument value=\"$i\"/> <!-- rank -->" >> ${APPLICATIONTMP}
