--- a/src/simix/simcalls.in
+++ b/src/simix/simcalls.in
@@ -37,16 +37,16 @@
 # compilation time)
 
 void vm_suspend(sg_host_t ind_vm);
-void vm_resume(sg_host_t ind_vm);
+void vm_resume(sg_host_t ind_vm) [[nohandler]];
 void vm_shutdown(sg_host_t ind_vm);
 void vm_save(sg_host_t ind_vm);
-void vm_restore(sg_host_t ind_vm);
+void vm_restore(sg_host_t ind_vm) [[nohandler]];
 
 void process_kill(smx_actor_t process);
 void process_killall(int reset_pid);
 void process_cleanup(smx_actor_t process) [[nohandler]];
 void process_suspend(smx_actor_t process) [[block]];
-void process_resume(smx_actor_t process);
+void process_resume(smx_actor_t process) [[nohandler]];
 void process_set_host(smx_actor_t process, sg_host_t dest);
 int  process_is_suspended(smx_actor_t process) [[nohandler]];
 int  process_join(smx_actor_t process, double timeout) [[block]];
