--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -335,7 +335,7 @@ else()
   set(HAVE_THREAD_LOCAL_STORAGE 0)
 endif()
 
-if(enable_model-checking AND NOT "${CMAKE_SYSTEM}" MATCHES "Linux")
+if(enable_model-checking AND NOT "${CMAKE_SYSTEM}" MATCHES "Linux|FreeBSD")
   message(WARNING "Support for model-checking has not been enabled on ${CMAKE_SYSTEM}: disabling it")
   set(enable_model-checking FALSE)
 endif()
@@ -371,7 +371,7 @@ if(HAVE_LIBUNWIND)
     # So let's comply and link against the System framework
     SET(SIMGRID_DEP "${SIMGRID_DEP} -lSystem")
   endif()
-  if("${CMAKE_SYSTEM}" MATCHES "Linux")
+  if("${CMAKE_SYSTEM}" MATCHES "Linux|FreeBSD")
     set(SIMGRID_DEP "${SIMGRID_DEP} -lunwind-ptrace")
     # This supposes that the host machine is either an AMD or a X86.
     # This is deeply wrong, and should be fixed by manually loading -lunwind-PLAT (FIXME)
@@ -388,10 +388,11 @@ else()
 endif()
 
 if(enable_model-checking)
-  SET(HAVE_MC 1)
-  
-  include(FindLibdw)  
-  SET(SIMGRID_DEP "${SIMGRID_DEP} -ldw")
+  find_package(Libdw REQUIRED)
+  find_package(Libevent REQUIRED)
+  include_directories(${LIBDW_INCLUDE_DIRS} ${LIBEVENT_INCLUDE_DIRS})
+  set(SIMGRID_DEP "${SIMGRID_DEP} ${LIBEVENT_LIBRARIES} ${LIBDW_LIBRARIES}")
+  set(HAVE_MC 1)
 else()
   SET(HAVE_MC 0)  
   set(HAVE_MMALLOC 0)
