disable java for MC FreeBSD builds, as it breaks mmalloc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -393,6 +393,10 @@ if(enable_model-checking)
   include_directories(${LIBDW_INCLUDE_DIRS} ${LIBEVENT_INCLUDE_DIRS})
   set(SIMGRID_DEP "${SIMGRID_DEP} ${LIBEVENT_LIBRARIES} ${LIBDW_LIBRARIES}")
   set(HAVE_MC 1)
+  if("${CMAKE_SYSTEM}" MATCHES "FreeBSD" AND enable_java)
+    message(WARNING "FreeBSD + Model-Checking + Java = too much for now. Disabling java")
+    set(enable_java FALSE)
+  endif()
 else()
   SET(HAVE_MC 0)  
   set(HAVE_MMALLOC 0)
