Add boost unit_test_framework to our dependencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -230,17 +230,14 @@ if(enable_smpi_papi)
   endif()
 endif()
 
-find_package(Boost 1.48)
+find_package(Boost 1.48 COMPONENTS unit_test_framework)
 if(Boost_FOUND)
   include_directories(${Boost_INCLUDE_DIRS})
 else()
   if(APPLE)
-    message(FATAL_ERROR "Failed to find Boost libraries (Try to install them with 'sudo fink install boost1.53.nopython')")
+    message(FATAL_ERROR "Boost libraries not found. Try to install them with 'sudo fink install boost1.53.nopython'")
   else()
-    message(FATAL_ERROR "Failed to find Boost libraries."
-                        "Did you install libboost-dev and libboost-context-dev?"
-                        "(libboost-context-dev is optional)"
-                        "SimGrid requires Boost >= 1.48.0")
+    message(FATAL_ERROR "Boost libraries not found. Install libboost-dev libboost-test-dev (>= 1.48.0).")
   endif()
 endif()
 
