--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -41,8 +41,8 @@ sonar.cpp.std=gnu++11
 sonar.c.std=gnu11
 sonar.java.source=7
 
-# Disable the whole logging mechanism during SonarQube analysis
-sonar.cfamily.predefinedMacros=XBT_LOG_MAYDAY
+# Disable the whole logging mechanism during SonarQube analysis (our logging macro are crude, but should not harm Sonar)
+sonar.cfamily.predefinedMacros=#define XBT_LOG_MAYDAY
 
 # Talk to me (travis don't like it, it's too much)
 # sonar.verbose=true
