try to not disable our logs on sonar, just to see

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -40,7 +40,7 @@ sonar.sourceEncoding=UTF-8
 sonar.java.source=7
 
 # Disable the whole logging mechanism during SonarQube analysis (our logging macro are crude, but should not harm Sonar)
-sonar.cfamily.predefinedMacros=#define XBT_LOG_MAYDAY
+# sonar.cfamily.predefinedMacros=#define XBT_LOG_MAYDAY
 
 # Talk to me (travis don't like it, it's too much)
 # sonar.verbose=true
